[package]
name = "paxoskv"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
log = "0.4"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
crossbeam = "0.8.0"
tokio = "1.0.1"
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.2.0-alpha", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
